# ai-incident-triage

./: .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  cli.py  evals.py  llm_evals.py  llm_processor.py  parser.py  processor.py  schemas.py
reports/: llm_eval_report.json
seed_data/expected/: data_pipeline_delay.json  failed_deploy_rollback.json  monitoring_gap.json  payment_outage.json  third_party_api_timeout.json
seed_data/incidents/: data_pipeline_delay.md  failed_deploy_rollback.md  monitoring_gap.md  payment_outage.md  third_party_api_timeout.md
tests/: test_cli.py  test_evals.py  test_llm_evals.py  test_parser.py  test_processor.py  test_schemas.py
